After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745676 - core: Fix warning when unloading a plugin that failed to load
core: Fix warning when unloading a plugin that failed to load
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-03-05 13:16 UTC by Bastien Nocera
Modified: 2015-03-06 17:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: Fix warning when unloading a plugin that failed to load (1.14 KB, patch)
2015-03-05 13:16 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-03-05 13:16:12 UTC
.
Comment 1 Bastien Nocera 2015-03-05 13:16:15 UTC
Created attachment 298636 [details] [review]
core: Fix warning when unloading a plugin that failed to load

This warning is normal:
(totem:17205): Grilo-WARNING **: [registry] grl-registry.c:1130: Failed to open module: libicui18n.so.52: cannot open shared object file: No such file or directory

This one isn't:
(totem:8432): GModule-CRITICAL **: g_module_close: assertion 'module != NULL' failed

This patch fixes the latter.
Comment 2 Victor Toso 2015-03-05 18:24:21 UTC
Review of attachment 298636 [details] [review]:

Looks okay!
Comment 3 Bastien Nocera 2015-03-06 17:26:00 UTC
Attachment 298636 [details] pushed as ee8d555 - core: Fix warning when unloading a plugin that failed to load