core: Fix warning when unloading a plugin that failed to load

This warning is normal:
(totem:17205): Grilo-WARNING **: [registry] grl-registry.c:1130: Failed to open module: libicui18n.so.52: cannot open shared object file: No such file or directory

This one isn't:
(totem:8432): GModule-CRITICAL **: g_module_close: assertion 'module != NULL' failed

This patch fixes the latter.

https://bugzilla.gnome.org/show_bug.cgi?id=745676